Customer  ID auto generate

--- a/myProject/SPA/index.html
+++ b/myProject/SPA/index.html
@@ -306,8 +306,8 @@
                             <div class="row mt-3">
 
                                 <div class="col">
-                                    <label class="form-label fw-bold" for="cash">Balance:</label>
-                                    <input class="form-control" id="cash" placeholder="" type="text">
+                                    <label class="form-label fw-bold" for="balanceCash">Balance:</label>
+                                    <input class="form-control" id="balanceCash" placeholder="" type="text">
                                 </div>
                             </div>
                             <div class="row mt-3 mb-1">
